--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -222,7 +222,7 @@
                                                     <wm-layoutgrid name="layoutgrid13">
                                                         <wm-gridrow name="gridrow42" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn66_1">
-                                                                <wm-label padding="unset 0.5em" name="label11" caption="These are the &quot;high level&quot; inspection fees that can be assessed with this inspection design, which are enabled with the &quot;Allow Same Day Inspections&quot; setting above."></wm-label>
+                                                                <wm-label padding="unset 0.5em" name="label11" caption="These &quot;high level&quot; inspection fees can be assessed if settings above are enabled. In addition to these fees, you can also assess escalating outcome fees when records of this inspection design move into a specific outcome on the &quot;Outcomes&quot; tab."></wm-label>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow43" padding="unset unset 1em unset">
@@ -240,36 +240,31 @@
                                                         <wm-gridrow name="gridrow40_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn61" padding="unset 1em unset unset">
                                                                 <wm-form-field name="cancelFee" displayname="Cancellation Fee" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue" primary-key="false" generator="assigned" key="cancelFee"
-                                                                type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="true" accessroles="CXAdmin"></wm-form-field>
-                                                                <wm-label padding="unset 0.5em" name="label21" caption="This field is currently only visible to CXAdmin and disabled pending future development." fontweight="bold" fontstyle="italic"
-                                                                accessroles="CXAdmin" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue"></wm-label>
+                                                                type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="false" accessroles="CXAdmin"></wm-form-field>
+                                                                <wm-label padding="unset 0.5em" name="label21" caption="This field is currently only visible to CXAdmin pending future development." fontweight="bold" fontstyle="italic" accessroles="CXAdmin"
+                                                                show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue"></wm-label>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn64_1" padding="unset 1em unset unset">
                                                                 <wm-form-field name="cancelFeeAccount" displayname="Cancellation Fee Accounting Code" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue" primary-key="false" generator="assigned"
                                                                 key="cancelFeeAccount" type="string" readonly="false" required="bind:Widgets.lfUpdateInspectionDesign.formWidgets.cancelFee.datavalue > 0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                                disabled="true" accessroles="CXAdmin"></wm-form-field>
-                                                                <wm-label padding="unset 0.5em" name="label22" caption="This field is currently only visible to CXAdmin and disabled pending future development." accessroles="CXAdmin" fontstyle="italic"
+                                                                disabled="false" accessroles="CXAdmin"></wm-form-field>
+                                                                <wm-label padding="unset 0.5em" name="label22" caption="This field is currently only visible to CXAdmin pending future development." accessroles="CXAdmin" fontstyle="italic"
                                                                 fontweight="bold" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue"></wm-label>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow41_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn63" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayCancelFee" displayname="Same Day Cancellation Fee" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue" primary-key="false" generator="assigned"
-                                                                key="sameDayCancelFee" type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="true" accessroles="CXAdmin"></wm-form-field>
-                                                                <wm-label padding="unset 0.5em" name="label23" accessroles="CXAdmin" caption="This field is currently only visible to CXAdmin and disabled pending future development." fontweight="bold"
+                                                                key="sameDayCancelFee" type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="false" accessroles="CXAdmin"></wm-form-field>
+                                                                <wm-label padding="unset 0.5em" name="label23" accessroles="CXAdmin" caption="This field is currently only visible to CXAdmin pending future development." fontweight="bold"
                                                                 fontstyle="italic" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue"></wm-label>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn65" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayCancelAcctCode" displayname="Same Day Cancellation Accounting Code" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue" primary-key="false"
                                                                 generator="assigned" key="sameDayCancelAcctCode" type="string" readonly="false" required="bind:Widgets.lfUpdateInspectionDesign.formWidgets.sameDayCancelFee.datavalue > 0" widget="text" maxchars="255"
-                                                                inputtype="text" placeholder="Enter value" disabled="true" accessroles="CXAdmin"></wm-form-field>
-                                                                <wm-label padding="unset 0.5em" name="label24" accessroles="CXAdmin" fontstyle="italic" fontweight="bold" caption="This field is currently only visible to CXAdmin and disabled pending future development."
+                                                                inputtype="text" placeholder="Enter value" disabled="false" accessroles="CXAdmin"></wm-form-field>
+                                                                <wm-label padding="unset 0.5em" name="label24" accessroles="CXAdmin" fontstyle="italic" fontweight="bold" caption="This field is currently only visible to CXAdmin pending future development."
                                                                 show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue"></wm-label>
-                                                            </wm-gridcolumn>
-                                                        </wm-gridrow>
-                                                        <wm-gridrow name="gridrow49_1">
-                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn66_3">
-                                                                <wm-label padding="unset 0.5em" name="label13" caption="Additional fees can be charged based on each individual inspection outcome on the &quot;Outcomes&quot; tab."></wm-label>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                     </wm-layoutgrid>
