--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -149,7 +149,7 @@
                                         <wm-icon iconsize="3em" iconclass="wi wi-view-list" name="icon7"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn25">
-                                        <wm-label caption="GIS Maintenance" class="p" fontsize="1.5" fontunit="em" name="label15"></wm-label>
+                                        <wm-label caption="Addresses" class="p" fontsize="1.5" fontunit="em" name="label15"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
