"Unmodaling" the checkout process for now based on Stripe payment limitations.
-MyCart- updated layout to include topnav/bottom/leftnav as a full page, preventing mandatory stripe redirect taking user back to a blank page
-topnav- updated "My Cart" link to direct to MyCart page instead of opening page in a modal

Wavemaker performance the last 2 days has not allowed me to complete this update by removing the "Click here to return to CivicXpress" text... pushing this out without completing that part to see if wavemakeronline performance will be improved back to a usable state
Files modified - [topnav,MyCart]

--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -3,7 +3,7 @@
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_cart">
-                <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Widgets.pagedialog1.open()" margin="unset 2em unset unset" badgevalue="bind:Variables.stvCartCount.dataSet.dataValue" class="cartBadge"></wm-anchor>
+                <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.stvCartCount.dataSet.dataValue" class="cartBadge"></wm-anchor>
             </wm-nav-item>
             <wm-nav-item name="list_messages">
                 <wm-anchor caption="Messages" name="messagesLink" iconclass="wi wi-mail-outline" on-click="Variables.goToPage_MyMessages.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.svCountUnReadMessagesByUser.dataSet[$i].unReadMessagesCount"
