MyCart- added topnav, leftnav, bottom layout back to make this a full page Topnav- DELETED THE DIALOG to prevent recursive issue identified by Sagar MunicipalityTransactions- updated column filter for "Transaction Date" to not show "invalid date" for blank entries (unpaid) Files modified - [MunicipalityTransactions,MyCart,topnav,cx2]

--- a/src/main/webapp/pages/MunicipalityTransactions/MunicipalityTransactions.html
+++ b/src/main/webapp/pages/MunicipalityTransactions/MunicipalityTransactions.html
@@ -119,7 +119,7 @@
                                                 <wm-grid-column binding="paidStatus" caption="Payment Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="paymentMethod" caption="Payment Method" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="paidBy" caption="Paid By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="paidDate" caption="Transaction Date" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('paidDate') | toLocalDateString:true}}</wm-grid-column>
+                                                <wm-grid-column binding="paidDate" caption="Transaction Date" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="transactionId" caption="Transaction ID" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             </wm-grid>
                                         </wm-gridcolumn>
