--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -1,7 +1,8 @@
 <wm-page data-ng-controller="MyCartPageController" pagetitle="My Cart" name="page1">
-
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
-
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow3_1">
@@ -20,9 +21,11 @@
                                                 <wm-grid-column binding="feeType" caption="Fee" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="amount" caption="Amount" type="string" formatpattern="toCurrency" currencypattern="USD" fractionsize="2" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="bind:feeTotal | toCurrency:'$':'2'" show="true" class="btn-secondary" iconclass="" title="Total" action="" shortcutkey="" disabled="false"></wm-grid-action>
-                                                <wm-grid-action key="customButton" display-name="Proceed to Checkout" show="false" class="btn-primary" iconclass="wi wi-navigate-next" title="Checkout" action="customButtonAction($event)" shortcutkey="" disabled="bind:feeTotal <= 0"></wm-grid-action>
+                                                <wm-grid-action key="customButton" display-name="Proceed to Checkout" show="false" class="btn-primary" iconclass="wi wi-navigate-next" title="Checkout" action="customButtonAction($event)"
+                                                shortcutkey="" disabled="bind:feeTotal <= 0"></wm-grid-action>
                                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove From Cart" action="Variables.lvDeleteFromCart.deleteRecord()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove From Cart" action="Variables.lvDeleteFromCart.deleteRecord()"
+                                                disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -78,7 +81,8 @@
                                     <wm-gridrow name="gridrow8">
                                         <wm-gridcolumn columnwidth="1" name="gridcolumn14_1"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="8" name="gridcolumn12">
-                                            <wm-composite name="compositeComments" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )" required="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )">
+                                            <wm-composite name="compositeComments" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )"
+                                            required="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )">
                                                 <wm-label class="col-md-3 form-control-static" name="labelComments" caption="Comments" fontweight="bold"></wm-label>
                                                 <wm-container class="col-md-9" name="container3">
                                                     <wm-textarea name="textareaComments" placeholder="Place Your Comments"></wm-textarea>
@@ -108,7 +112,7 @@
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
-
+    <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view3">
         <wm-pagedialog name="pagedialogViewForm" oktext="Close" content="_viewForm" modal="true" class="modal-larger" title="View Form" iconclass="wi wi-assignment">
             <wm-param name="FormGUID" value="bind:Widgets.gridFeesList.selecteditem.itemGuid" type="string"></wm-param>
