--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -21,11 +21,9 @@
                                                 <wm-grid-column binding="feeType" caption="Fee" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="amount" caption="Amount" type="string" formatpattern="toCurrency" currencypattern="USD" fractionsize="2" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="bind:feeTotal | toCurrency:'$':'2'" show="true" class="btn-secondary" iconclass="" title="Total" action="" shortcutkey="" disabled="false"></wm-grid-action>
-                                                <wm-grid-action key="customButton" display-name="Proceed to Checkout" show="false" class="btn-primary" iconclass="wi wi-navigate-next" title="Checkout" action="customButtonAction($event)"
-                                                shortcutkey="" disabled="bind:feeTotal <= 0"></wm-grid-action>
+                                                <wm-grid-action key="customButton" display-name="Proceed to Checkout" show="false" class="btn-primary" iconclass="wi wi-navigate-next" title="Checkout" action="customButtonAction($event)" shortcutkey="" disabled="bind:feeTotal <= 0"></wm-grid-action>
                                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove From Cart" action="Variables.lvDeleteFromCart.deleteRecord()"
-                                                disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove From Cart" action="Variables.lvDeleteFromCart.deleteRecord()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -38,6 +36,7 @@
                                 </wm-layoutgrid>
                             </wm-wizardstep>
                             <wm-wizardstep name="wizardstep2" title="Checkout" iconclass="wi wi-attach-money" on-load="wizardstep2Load($scope, stepIndex)" on-prev="wizardstep2Prev($scope, currentStep, stepIndex)">
+                                <wm-spinner id="spinner1" name="spinner1" caption="Processing payment"></wm-spinner>
                                 <wm-layoutgrid name="layoutgrid2">
                                     <wm-gridrow name="gridrow4" padding="1em unset 4em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn4">
@@ -81,8 +80,7 @@
                                     <wm-gridrow name="gridrow8">
                                         <wm-gridcolumn columnwidth="1" name="gridcolumn14_1"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="8" name="gridcolumn12">
-                                            <wm-composite name="compositeComments" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )"
-                                            required="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )">
+                                            <wm-composite name="compositeComments" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )" required="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check' )||(Widgets.radiosetPaymentOptions.datavalue=='Cash' )||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card' )">
                                                 <wm-label class="col-md-3 form-control-static" name="labelComments" caption="Comments" fontweight="bold"></wm-label>
                                                 <wm-container class="col-md-9" name="container3">
                                                     <wm-textarea name="textareaComments" placeholder="Place Your Comments"></wm-textarea>
